fixed the video beiing too small on mobile design

--- a/app/assets/stylesheets/kopfwelt/_index.scss
+++ b/app/assets/stylesheets/kopfwelt/_index.scss
@@ -32,6 +32,7 @@
 .Teaser--video {
 	padding: 0 0 30.25% 0;
 	position: relative;
+	min-height: 14.2857em;
 	iframe,
 	embed {
 		position: absolute;
